added accounts endpoints
* removed generic from repo factory

* added crud default repo

* improved users

* accounts migrations

* accounts services and repo

* added controller endpoints for accounts

* added keys client for account service

* fixed tests
