# src/models/account_id.rs
@@ -1,30 +1,30 @@
 use std::str::FromStr;
 
 use diesel::sql_types::Uuid as SqlUuid;
-use uuid::{ParseError, Uuid};
+use uuid::{self, Uuid};
 
 #[derive(Debug, Serialize, Deserialize, FromSqlRow, AsExpression, Clone, Copy, Default, PartialEq)]
 #[sql_type = "SqlUuid"]
-pub struct UserId(Uuid);
-derive_newtype_sql!(user_id, SqlUuid, UserId, UserId);
+pub struct AccountId(Uuid);
+derive_newtype_sql!(user_id, SqlUuid, AccountId, AccountId);
 
-impl UserId {
+impl AccountId {
     pub fn new(id: Uuid) -> Self {
-        UserId(id)
+        AccountId(id)
     }
 }
 
-impl UserId {
+impl AccountId {
     pub fn inner(&self) -> &Uuid {
         &self.0
     }
 }
 
-impl FromStr for UserId {
-    type Err = ParseError;
+impl FromStr for AccountId {
+    type Err = uuid::ParseError;
 
     fn from_str(s: &str) -> Result<Self, Self::Err> {
         let id = Uuid::parse_str(s)?;
-        Ok(UserId::new(id))
+        Ok(AccountId::new(id))
     }
 }
