# src/models/mod.rs
@@ -1,11 +1,19 @@
-mod auth;
+mod account;
+mod account_address;
+mod account_id;
+mod amount;
 mod authentication_token;
+mod currency;
 mod oauth_token;
 mod user;
 mod user_id;
 
-pub use self::auth::*;
+pub use self::account::*;
+pub use self::account_address::*;
+pub use self::account_id::*;
+pub use self::amount::*;
 pub use self::authentication_token::*;
+pub use self::currency::*;
 pub use self::oauth_token::*;
 pub use self::user::*;
 pub use self::user_id::*;
